Add `ECMA48TerminalTest` for terminal color and property validation
- Implemented comprehensive unit tests for `ECMA48Terminal` to validate color handling (foreground, background, bold colors, RGB) and terminal properties (blink rate, session info, focus, etc.).
- Refactored `oscResponse` method in `ECMA48Terminal` for clarity and improved OSC color parsing, supporting default and palette colors.
- Replaced String encoding handling in `xtermSetClipboardText` with `StandardCharsets.UTF_8`.
- Updated Gradle settings to use the platform test runner.
- Enhanced `DemoApplication` to toggle terminal background exposure with menu item handling.
- Adjusted `.gitignore` to include the `/out` directory.